@@ -1,3 +1,7 @@
+2024-07-17  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Implement the "edit" command.
+
 2024-06-22  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Release 1.0
